--- a/app/code/Mageplaza/SocialLogin/view/frontend/layout/customer_account_create.xml
+++ b/app/code/Mageplaza/SocialLogin/view/frontend/layout/customer_account_create.xml
@@ -22,10 +22,10 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="content">
+        <!-- <referenceContainer name="content">
             <block class="Mageplaza\SocialLogin\Block\Popup\Social" before="-" name="social-login-popup-authentication-social-create" ifconfig="sociallogin/general/enabled" template="Mageplaza_SocialLogin::form/social.phtml">
                 <block class="Mageplaza\SocialLogin\Block\Popup" name="social-login-request-info" before="-" as="request.info" template="Mageplaza_SocialLogin::popup/form/email.phtml"/>
             </block>
-        </referenceContainer>
+        </referenceContainer> -->
     </body>
 </page>
