--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/widget/name.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/widget/name.phtml
@@ -1,3 +1,33 @@
+<style>
+.block-content-register  .field-name-firstname, .block-content-register  .field-name-lastname{
+    display: inline-block;
+    width: 174px;
+}
+.block-content-register  .field-name-lastname{
+    margin-left: 12px;
+}
+.custom-style-name-firstname, .custom-style-name-lastname{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #333333;
+    margin-bottom: 8px;
+}
+.block-content-register .field-name-firstname .control input, .block-content-register .field-name-lastname .control input{
+    border-radius: 4px;
+}
+@media screen and (max-width: 768px) {
+    .block-content-register .field-name-firstname .control input, .block-content-register .field-name-lastname .control input{
+        height: 40px;
+    }
+    .block-content-register  .field-name-firstname, .block-content-register  .field-name-lastname{
+        width: calc(50vw - 22px);
+    }
+}
+</style>
+
+
 <?php
 /**
  * Copyright © 2016 Magento. All rights reserved.
@@ -72,9 +102,9 @@ $suffix = $block->showSuffix();
             <label class="label" for="<?php /* @escapeNotVerified */ echo $block->getFieldId('firstname') ?>">
                 <span><?php /* @escapeNotVerified */ echo $block->getStoreLabel('firstname') ?></span>
             </label>
-
+            <div class="custom-style-name-firstname">First Name</div>
             <div class="control">
-                <input placeholder="<?php /* @escapeNotVerified */ echo __('First Name') ?>" type="text" id="<?php /* @escapeNotVerified */ echo $block->getFieldId('firstname') ?>"
+                <input type="text" id="<?php /* @escapeNotVerified */ echo $block->getFieldId('firstname') ?>"
                        name="<?php /* @escapeNotVerified */ echo $block->getFieldName('firstname') ?>"
                        value="<?php echo $block->escapeHtml($block->getObject()->getFirstname()) ?>"
                        title="<?php /* @escapeNotVerified */ echo $block->getStoreLabel('firstname') ?>"
@@ -87,7 +117,6 @@ $suffix = $block->showSuffix();
             <label class="label" for="<?php /* @escapeNotVerified */ echo $block->getFieldId('middlename') ?>">
                 <span><?php /* @escapeNotVerified */ echo $block->getStoreLabel('middlename') ?></span>
             </label>
-
             <div class="control">
                 <input placeholder="<?php /* @escapeNotVerified */ echo __('Middle Name') ?>" type="text" id="<?php /* @escapeNotVerified */ echo $block->getFieldId('middlename') ?>"
                        name="<?php /* @escapeNotVerified */ echo $block->getFieldName('middlename') ?>"
@@ -101,9 +130,9 @@ $suffix = $block->showSuffix();
             <label class="label"  for="<?php /* @escapeNotVerified */ echo $block->getFieldId('lastname') ?>">
                 <span><?php /* @escapeNotVerified */ echo $block->getStoreLabel('lastname') ?></span>
             </label>
-
+            <div class="custom-style-name-lastname">Last Name</div>
             <div class="control">
-                <input placeholder="<?php /* @escapeNotVerified */ echo __('Last Name') ?>" type="text" id="<?php /* @escapeNotVerified */ echo $block->getFieldId('lastname') ?>"
+                <input type="text" id="<?php /* @escapeNotVerified */ echo $block->getFieldId('lastname') ?>"
                        name="<?php /* @escapeNotVerified */ echo $block->getFieldName('lastname') ?>"
                        value="<?php echo $block->escapeHtml($block->getObject()->getLastname()) ?>"
                        title="<?php /* @escapeNotVerified */ echo $block->getStoreLabel('lastname') ?>"
